--- a/template/view/html/club/login.html
+++ b/template/view/html/club/login.html
@@ -26,12 +26,12 @@
                         </div>
                         <div class="col-md-4 mt-20">
                             <div class="about-page-content">
-                                <?php if($success) : ?>
+                                <!-- <?php if($success) : ?>
                                 <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i>
                                     <?php echo $success; ?>
                                     <button type="button" class="close" data-dismiss="alert">&times;</button>
                                 </div>
-                                <?php endif; ?>
+                                <?php endif; ?> -->
                                 <!-- <?php if($warning_err) : ?>
                                 <div class="alert alert-danger alert-dismissible"><i
                                         class="fa fa-exclamation-circle"></i>
