--- a/template/view/html/club/member_form.html
+++ b/template/view/html/club/member_form.html
@@ -26,12 +26,15 @@
                             <div class="col-md-3 mt-20">
                                 <div class="club-login-details">
                                     <div class="page-title">Club Details</div>
-                                    <p class="seprate-p"><b>Rotary Club of
-                                            <?php echo $club_name; ?></b></p>
+                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
+                                    <hr class="featurette-divider">
+                                    <p class="seprate-p">Rotary Club of
+                                        <b><?php echo $club_name; ?></b></p>
+
                                     <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
                                             <?php echo $date; ?></span><span class="pull-right"><i
                                                 class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-mobile"></i> <a
+                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
                                                 href="tel:<?php echo $mobile; ?>">
                                                 <?php echo $mobile; ?></a></span></p>
                                     <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
@@ -48,7 +51,7 @@
                                     <div class="mobile-drop">
                                         <ul id="page-menu">
                                             <li>
-                                                <a href="<?php echo $dashbaord; ?>"
+                                                <a href="<?php echo $dashboard; ?>"
                                                     class="active-menu"><?php echo $text_dashboard; ?></a>
                                             </li>
                                             <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
@@ -62,7 +65,7 @@
                                 <div class="desktop-drop">
                                     <ul id="page-menu">
                                         <li>
-                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
+                                            <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
                                         </li>
                                         <li><a href="<?php echo $member; ?>"
                                                 class="active-menu"><?php echo $text_member; ?></a></li>
@@ -77,50 +80,61 @@
                                 <div class="about-page-content">
                                     <div class="page-title">
                                         Add Members
+                                        <a href="<?php echo $cancel; ?>" data-toggle="tooltip" title=""
+                                            class="btn btn-login btn-sm btn-bold btn-table" data-original-title="Back"
+                                            style="float: right !important;"><i class="fa fa-reply"></i></a>
                                     </div>
                                     <div class="club-page-content">
                                         <form action="<?php echo $action; ?>" method="post"
                                             enctype="multipart/form-data">
                                             <div class="form-group row">
                                                 <label for="month" class="col-sm-3 col-form-label">Month :</label>
-                                                <div class="col-sm-4">
-                                                    <select name="month" id="month" class="form-control">
-                                                        <option value="06">June</option>
-                                                        <option value="07">July</option>
-                                                        <option value="08">August</option>
-                                                        <option value="09">September</option>
-                                                        <option value="10">October</option>
-                                                        <option value="11">November</option>
-                                                        <option value="12">December</option>
-                                                        <option value="01">January</option>
-                                                        <option value="02">February</option>
-                                                        <option value="03">March</option>
-                                                        <option value="04">April</option>
-                                                        <option value="05">May</option>
-                                                    </select>
+                                                <div class="col-sm-3">
+                                                    <?php
+                                                     $timestamp = time();
+
+                                                    // determine the selected month, day, and year
+                                                    $selected_month = date('n', $timestamp);
+                                                    $selected_day = date('j', $timestamp);
+                                                    $selected_year = date('Y', $timestamp);
+
+                                                    // now, create the drop-down for months
+                                                    $month_html = '<select name="month" id="month" class="form-control">';
+                                                    for ($x = 1; $x < 13; $x++) {
+                                                        $month_html.= '<option value='.$x.($selected_month == $x ? ' selected=true' : '').'>'.date("F", mktime(0, 0, 0, $x, 1, $selected_year)).'</option>';
+                                                    }
+                                                    $month_html.= '</select>';
+                                                    // output
+                                                    print $month_html;
+                                                    ?>
                                                 </div>
-                                                <label for="year" class="col-sm-1 col-form-label">Year :</label>
-                                                <div class="col-sm-4">
-                                                    <select name="year" id="year" class="form-control">
-                                                        <option value="2019">2019</option>
-                                                        <option value="2018">2018</option>
-                                                    </select>
+                                                <label for="year" class="col-sm-3 col-form-label">Year :</label>
+                                                <div class="col-sm-3">
+                                                    <?php
+                                                    $year_html = '<select name="year" id="year" class="form-control">';
+                                                    $previ_year = date("Y",strtotime("-1 year"));    
+                                                    $start_year = date('Y', time());
+                                                    $max_year = $start_year + 1;
+                                                    for ($x = $previ_year; $x < $max_year; $x++) {
+                                                        $year_html.= '<option value='.$x.($selected_year == $x ? ' selected=true' : '').'>'.$x.'</option>';
+                                                    }
+                                                    $year_html.= '</select>';
+                                                    // output
+                                                    print $year_html;
+                                                    ?>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
                                                 <label for="inputmember_induct" class="col-sm-3 col-form-label">Members
                                                     Inducted :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="member_induct"
                                                         id="member_induct" required="">
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
                                                 <label for="inputmember_unlist" class="col-sm-3 col-form-label">Members
                                                     Unlisted :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="member_unlist"
                                                         id="member_unlist" required="">
                                                 </div>
@@ -129,16 +143,13 @@
                                             <div class="form-group row">
                                                 <label for="inputnet_growth" class="col-sm-3 col-form-label">Net Growth
                                                     :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="net_growth"
                                                         id="net_growth" required="" readonly>
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
                                                 <label for="inputpoint_accumulate"
                                                     class="col-sm-3 col-form-label">Citation Points Accrued :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="point_accumulate"
                                                         id="point_accumulate" required="">
                                                 </div>
@@ -149,7 +160,7 @@
                                             <div class="form-group row">
                                                 <label for="inputnet_growth" class="col-sm-3 col-form-label">
                                                     Total Members:
-                                                    <?php echo implode(" ",$total_members); ?>
+                                                    <?php echo $total_members; ?>
                                                 </label>
                                                 <button type="submit" class="btn btn-sav mb-2">Save</button>
                                             </div>
@@ -173,4 +184,5 @@
                         $("#net_growth").val(Number($("#member_induct").val()) - Number($("#member_unlist").val()));
                     }
                 });
+
             </script>
