--- a/template/view/html/club/trf.html
+++ b/template/view/html/club/trf.html
@@ -26,12 +26,15 @@
                             <div class="col-md-3 mt-20">
                                 <div class="club-login-details">
                                     <div class="page-title">Club Details</div>
-                                    <p class="seprate-p"><b>Rotary Club of
-                                            <?php echo $club_name; ?></b></p>
+                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
+                                    <hr class="featurette-divider">
+                                    <p class="seprate-p">Rotary Club of
+                                        <b><?php echo $club_name; ?></b></p>
+
                                     <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
                                             <?php echo $date; ?></span><span class="pull-right"><i
                                                 class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-mobile"></i> <a
+                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
                                                 href="tel:<?php echo $mobile; ?>">
                                                 <?php echo $mobile; ?></a></span></p>
                                     <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
@@ -48,7 +51,7 @@
                                     <div class="mobile-drop">
                                         <ul id="page-menu">
                                             <li>
-                                                <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
+                                                <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
                                             </li>
                                             <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                             <li><a href="<?php echo $trf; ?>"
@@ -62,7 +65,7 @@
                                 <div class="desktop-drop">
                                     <ul id="page-menu">
                                         <li>
-                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
+                                            <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
                                         </li>
                                         <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                         <li><a href="<?php echo $trf; ?>"
