--- a/template/view/html/club/view_project.html
+++ b/template/view/html/club/view_project.html
@@ -51,7 +51,7 @@
                                     <div class="mobile-drop">
                                         <ul id="page-menu">
                                             <li>
-                                                <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
+                                                <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
                                             </li>
                                             <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                             <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
@@ -65,7 +65,7 @@
                                 <div class="desktop-drop">
                                     <ul id="page-menu">
                                         <li>
-                                            <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
+                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
                                         </li>
                                         <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                         <li><a href="<?php echo $trf; ?>"><?php echo $text_trf; ?></a></li>
@@ -79,7 +79,7 @@
                             <div class="col-md-9 mt-20">
                                 <div class="about-page-content">
                                     <div class="page-title">
-                                        Add TRF Contribution
+                                        View Projects
                                         <a href="<?php echo $cancel; ?>" data-toggle="tooltip" title=""
                                             class="btn btn-login btn-sm btn-bold btn-table" data-original-title="Back"
                                             style="float: right !important;"><i class="fa fa-reply"></i></a>
@@ -89,39 +89,14 @@
                                             enctype="multipart/form-data">
                                             <div class="form-group row">
                                                 <label for="month" class="col-sm-3 col-form-label">Month :</label>
-                                                <div class="col-sm-3">
-                                                    <?php
-                                                        $timestamp = time();
-
-                                                    // determine the selected month, day, and year
-                                                    $selected_month = date('n', $timestamp);
-                                                    $selected_day = date('j', $timestamp);
-                                                    $selected_year = date('Y', $timestamp);
-
-                                                    // now, create the drop-down for months
-                                                    $month_html = '<select name="month" id="month" class="form-control">';
-                                                    for ($x = 1; $x < 13; $x++) {
-                                                        $month_html.= '<option value='.$x.($selected_month == $x ? ' selected=true' : '').'>'.date("F", mktime(0, 0, 0, $x, 1, $selected_year)).'</option>';
-                                                    }
-                                                    $month_html.= '</select>';
-                                                    // output
-                                                    print $month_html;
-                                                    ?>
+                                                <div class="col-sm-4">
+                                                    <input type="text" class="form-control" name="month" id="month"
+                                                        readonly>
                                                 </div>
-                                                <label for="year" class="col-sm-3 col-form-label">Year :</label>
-                                                <div class="col-sm-3">
-                                                    <?php
-                                                    $year_html = '<select name="year" id="year" class="form-control">';
-                                                    $previ_year = date("Y",strtotime("-1 year"));    
-                                                    $start_year = date('Y', time());
-                                                    $max_year = $start_year + 1;
-                                                    for ($x = $previ_year; $x < $max_year; $x++) {
-                                                        $year_html.= '<option value='.$x.($selected_year == $x ? ' selected=true' : '').'>'.$x.'</option>';
-                                                    }
-                                                    $year_html.= '</select>';
-                                                    // output
-                                                    print $year_html;
-                                                    ?>
+                                                <label for="year" class="col-sm-1 col-form-label">Year :</label>
+                                                <div class="col-sm-4">
+                                                    <input type="text" class="form-control" name="year" id="year"
+                                                        readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -129,7 +104,8 @@
                                                 <label for="title" class="col-sm-3 col-form-label">Projects
                                                     Title:</label>
                                                 <div class="col-sm-9">
-                                                    <input type="text" class="form-control" name="title" id="title">
+                                                    <input type="text" class="form-control" name="title" id="title"
+                                                        readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -138,7 +114,7 @@
                                                     :</label>
                                                 <div class="col-sm-9">
                                                     <textarea name="description" id="description" class="form-control"
-                                                        placeholder="Need to have only simple text input"></textarea>
+                                                        readonly></textarea>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -147,7 +123,8 @@
                                                     (&#8377;)
                                                     :</label>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" name="amount" id="amount">
+                                                    <input type="number" class="form-control" name="amount" id="amount"
+                                                        readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -157,7 +134,7 @@
                                                     :</label>
                                                 <div class="col-sm-9">
                                                     <input type="number" class="form-control" name="no_of_beneficiary"
-                                                        id="no_of_beneficiary">
+                                                        id="no_of_beneficiary" readonly>
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -195,7 +172,7 @@
                                                             <div class="checkbox checkbox-primary">
                                                                 <input id="category" name="category[]"
                                                                     value="<?php echo $category['category_id']; ?>"
-                                                                    type="checkbox">
+                                                                    type="checkbox" checked>
                                                                 <label for="category[]">
                                                                     <?php echo $category['name']; ?>
                                                                 </label>
@@ -211,20 +188,10 @@
                                                     accrued
                                                     :</label>
                                                 <div class="col-sm-9">
-                                                    <input type="number" class="form-control" id="points" name="points">
+                                                    <input type="number" class="form-control" id="points" name="points"
+                                                        readonly>
                                                 </div>
                                             </div>
-                                            <hr class="featurette-divider">
-
-                                            <input type="hidden" name="club_id" id="club_id"
-                                                value="<?php echo $club_id; ?>">
-                                            <div class="form-group row">
-                                                <!-- <label for="" class="col-sm-6 pull-left">
-                                                    Total Projects : <?php echo round(implode(" ",$total_project)); ?>
-                                                </label> -->
-                                                <button type="submit" class="btn btn-sav mb-2">Save</button>
-                                            </div>
-                                            <hr class="featurette-divider">
                                         </form>
                                     </div>
                                 </div>
@@ -234,65 +201,3 @@
                 </div>
             </div>
             <?php echo $footer; ?>
-            <div id="uploadModal" class="modal fade" role="dialog">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title">File upload form</h4>
-                        </div>
-                        <div class="modal-body">
-                            <form method='post' action='' enctype="multipart/form-data" id="form-upload">
-                                Select file : <input type="file" name="file[]" value="" /><br>
-                                <button type='button' class='btn btn-login' id='upload'
-                                    style="float: right !important;">Save</button>
-                            </form>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <script>
-                $('.img-thumbnail').on('click', function () {
-                    var element = $(this),
-                        id = element.attr('id');
-
-                    $('#uploadModal').modal('show');
-
-                    $('#uploadModal').on('click', '#upload', function () {
-                        if (typeof timer != 'undefined') {
-                            clearInterval(timer);
-                        }
-
-                        timer = setInterval(function () {
-                            if ($('#form-upload input[name=\'file\']').val != '') {
-                                clearInterval(timer);
-
-                                $.ajax({
-                                    url: 'index.php?url=club/upload',
-                                    type: 'POST',
-                                    dataType: 'json',
-                                    data: new FormData($('#form-upload')[0]),
-                                    cache: false,
-                                    contentType: false,
-                                    processData: false,
-                                    success: function (json) {
-                                        if (json['error']) {
-                                            alert(json['error']);
-                                        }
-
-                                        if (json['success']) {
-                                            alert(json['success']);
-
-                                            $('#' + id).find('img').attr('src', json['thumb']);
-                                            $('#' + id).next('input').val(json['target']);
-
-                                            $('#uploadModal').modal('hide');
-                                        }
-                                    }
-                                });
-                            }
-                        }, 500);
-                    });
-                });
-            </script>
