--- a/template/view/html/club/view_trf.html
+++ b/template/view/html/club/view_trf.html
@@ -26,12 +26,15 @@
                             <div class="col-md-3 mt-20">
                                 <div class="club-login-details">
                                     <div class="page-title">Club Details</div>
-                                    <p class="seprate-p"><b>Rotary Club of
-                                            <?php echo $club_name; ?></b></p>
+                                    <p class="image-sep"><img src="<?php echo $thumb; ?>"></p>
+                                    <hr class="featurette-divider">
+                                    <p class="seprate-p">Rotary Club of
+                                        <b><?php echo $club_name; ?></b></p>
+
                                     <p class="combine-p"><span><i class="fa fa-calendar-o"></i>
                                             <?php echo $date; ?></span><span class="pull-right"><i
                                                 class="fa fa-trophy"></i> 250</span></p>
-                                    <p class="combine-p"><span><i class="fa fa-mobile"></i> <a
+                                    <p class="combine-p"><span><i class="fa fa-phone"></i> <a
                                                 href="tel:<?php echo $mobile; ?>">
                                                 <?php echo $mobile; ?></a></span></p>
                                     <p class="combine-p"><span><i class="fa fa-envelope-o"></i><a
@@ -48,7 +51,7 @@
                                     <div class="mobile-drop">
                                         <ul id="page-menu">
                                             <li>
-                                                <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
+                                                <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
                                             </li>
                                             <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                             <li><a href="<?php echo $trf; ?>"
@@ -62,7 +65,7 @@
                                 <div class="desktop-drop">
                                     <ul id="page-menu">
                                         <li>
-                                            <a href="<?php echo $dashbaord; ?>"><?php echo $text_dashboard; ?></a>
+                                            <a href="<?php echo $dashboard; ?>"><?php echo $text_dashboard; ?></a>
                                         </li>
                                         <li><a href="<?php echo $member; ?>"><?php echo $text_member; ?></a></li>
                                         <li><a href="<?php echo $trf; ?>"
@@ -77,6 +80,9 @@
                                 <div class="about-page-content">
                                     <div class="page-title">
                                         View TRF Contribution
+                                        <a href="<?php echo $cancel; ?>" data-toggle="tooltip" title=""
+                                            class="btn btn-login btn-sm btn-bold btn-table" data-original-title="Back"
+                                            style="float: right !important;"><i class="fa fa-reply"></i></a>
                                     </div>
                                     <div class="club-page-content">
                                         <form action="<?php echo $action; ?>" method="post"
@@ -84,45 +90,29 @@
                                             <div class="form-group row">
                                                 <label for="month" class="col-sm-3 col-form-label">Month :</label>
                                                 <div class="col-sm-4">
-                                                    <select name="month" id="month" class="form-control">
-                                                        <option value="06">June</option>
-                                                        <option value="07">July</option>
-                                                        <option value="08">August</option>
-                                                        <option value="09">September</option>
-                                                        <option value="10">October</option>
-                                                        <option value="11">November</option>
-                                                        <option value="12">December</option>
-                                                        <option value="01">January</option>
-                                                        <option value="02">February</option>
-                                                        <option value="03">March</option>
-                                                        <option value="04">April</option>
-                                                        <option value="05">May</option>
-                                                    </select>
+                                                    <input type="number" class="form-control" name="month" id="month"
+                                                        value="<?php echo $month; ?>" readonly="">
                                                 </div>
                                                 <label for="year" class="col-sm-1 col-form-label">Year :</label>
                                                 <div class="col-sm-4">
-                                                    <select name="year" id="year" class="form-control">
-                                                        <option value="2019">2019</option>
-                                                        <option value="2018">2018</option>
-                                                    </select>
+                                                    <input type="number" class="form-control" name="year" id="year"
+                                                        value="<?php echo $year; ?>" readonly="">
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
                                             <div class="form-group row">
                                                 <label for="inputamount_inr" class="col-sm-3 col-form-label">Amount
                                                     in INR :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="amount_inr"
-                                                        id="amount_inr"value="<?php echo $amount_inr; ?>" readonly="">
+                                                        id="amount_inr" value="<?php echo $amount_inr; ?>" readonly="">
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
                                                 <label for="inputexchange_rate" class="col-sm-3 col-form-label">Exchange
                                                     Rate :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="exchange_rate"
-                                                        id="exchange_rate" value="<?php echo $exchange_rate; ?>" readonly="">
+                                                        id="exchange_rate" value="<?php echo $exchange_rate; ?>"
+                                                        readonly="">
                                                 </div>
                                             </div>
                                             <hr class="featurette-divider">
@@ -130,16 +120,13 @@
                                                 <label for="inputamount_usd" class="col-sm-3 col-form-label">Amount in
                                                     USD
                                                     :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="amount_usd"
                                                         id="amount_usd" value="<?php echo $amount_usd; ?>" readonly="">
                                                 </div>
-                                            </div>
-                                            <hr class="featurette-divider">
-                                            <div class="form-group row">
                                                 <label for="inputpoints" class="col-sm-3 col-form-label">Citation
                                                     Points Accrued :</label>
-                                                <div class="col-sm-9">
+                                                <div class="col-sm-3">
                                                     <input type="number" class="form-control" name="points" id="points"
                                                         value="<?php echo $points; ?>" readonly="">
                                                 </div>
